--- a/source/web/dashboard/templates/base.html
+++ b/source/web/dashboard/templates/base.html
@@ -132,6 +132,8 @@
     <script src="{% static 'dashboard/vendors/fastclick/lib/fastclick.js' %}"></script>
     <!-- NProgress -->
     <script src="{% static 'dashboard/vendors/nprogress/nprogress.js' %}"></script>
+    <!-- Dropzone.js -->
+    <script src="{% static 'dashboard/vendors/dropzone/dist/min/dropzone.min.js' %}"></script>
 
     <!-- Custom Theme Scripts -->
     <script src="{% static 'dashboard/build/js/custom.min.js' %}"></script>
