--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -14,7 +14,7 @@
                       <h5>
                           Description of Credit Risk Tools
                           <br>
-                          INPUT (Analytic, Simulation), (Provider), (0.1, 0.2, ...), (Bond Portfolio), (Forward Curves)
+                          INPUT (Portfolio Name), (Analytic, Simulation), (Provider), (0.1, 0.2, ...), (Forward Curves)
                           <br>
                           for anayltic and simulation, correlation is flat
                       </h5>
@@ -31,29 +31,6 @@
 
                           <button type="button" class="btn btn-success" onclick="button_run_portfolio_credit_risk()">Submit</button>
                       </form>
-                  </div>
-              </div>
-
-              <div class="clearfix"></div>
-
-              <div class="row">
-                  <div class="col-md-4 col-sm-12 col-xs-12">
-                      <div class="x_panel">
-                          <div class="x_title">
-                              <h2>Dropzone multiple file uploader</h2>
-                              <div class="clearfix"></div>
-                          </div>
-
-                          <div class="x_content">
-                              <form action="ajax_cred_risk_analytics" class="dropzone" enctype="multipart/form-data">
-                                  {% csrf_token %}
-                              </form>
-                              <br />
-                              <br />
-                              <br />
-                              <br />
-                          </div>
-                      </div>
                   </div>
               </div>
           </div>
