--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="x_content">
                         <br />
-                        <form class="form-horizontal form-label">
+                        <form class="form-horizontal form-label" method="post">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label class="control-label col-md-3">Portfolio Name</label>
@@ -69,7 +69,7 @@
                             <div class="ln_solid"></div>
                             <div class="form-group">
                                 <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                    <button type="submit" class="btn btn-success" onclick="button_run_portfolio_credit_risk()">Submit</button>
+                                    <button type="button" class="btn btn-success" onclick="button_run_portfolio_credit_risk()">Submit</button>
                                 </div>
                             </div>
                         </form>
