adding more correlation options

--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -61,8 +61,12 @@
                                 <label class="control-label col-md-3 ">Correlation</label>
                                 <div class="col-md-6">
                                     <select class="form-control" id="form_correlation_id">
+                                        <option>0.05</option>
                                         <option>0.1</option>
+                                        <option>0.15</option>
                                         <option>0.2</option>
+                                        <option>0.25</option>
+                                        <option>0.3</option>
                                     </select>
                                 </div>
                             </div>
