add combo calcs to choice list

--- a/source/web/dashboard/templates/dashboard/credit_risk.html
+++ b/source/web/dashboard/templates/dashboard/credit_risk.html
@@ -42,6 +42,7 @@
                                 <label class="control-label col-md-3" >Analytics Type</label>
                                 <div class="col-md-6">
                                     <select class="form-control" id="form_calculation_type_id">
+                                        <option>Analytical + Monte</option>
                                         <option>Analytical</option>
                                         <option>Monte Carlo</option>
                                     </select>
